Compile at Java 21 and modernise the recipe source
Bump maven.compiler.release 17 -> 21 (tests already run on JDK 25) and use the
idioms it unlocks: type patterns in instanceof so the cast disappears, switch
pattern matching for the FieldAccess/Identifier constant-field dispatch, and
List.of() for the small immutable lists. Behaviour is unchanged -- all 16 tests
pass -- this is readability only.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>